--- a/modelos de entrenamiento/todo/regresion.ipynb
+++ b/modelos de entrenamiento/todo/regresion.ipynb
@@ -43,7 +43,7 @@
         "import pandas as pd\n",
         "from pandas import read_csv\n",
         "\n",
-        "url = \"Health_heart_experimental.csv\"\n",
+        "url = \"../Health_heart_experimental.csv\"\n",
         "dfBase = read_csv(url, sep=',')\n",
         "\n",
         "print(dfBase.shape)\n",
